<resources>
    <string name="app_name">PERFIT</string>
    <string name="joyin">报名参加</string>
    <string name="theme">【活动主题】</string>
    <string name="joyinus">报名参加</string>
    <string name="already_joyed">已报名</string>
    <string name="joyed_is_end">已结束</string>
    <string name="joyin_end">已结束</string>
    <string name="free">免费</string>
    <string name="please_inputyourpass">请输入您的密码</string>
    <string name="please_input_yourid">请输入您的账号</string>
    <string name="logintext">登录</string>
    <string name="weixinlogin">微信登录</string>
    <string name="forgot_pass">忘记密码?</string>
    <string name="vailidate_code">请输入您的验证码</string>
    <string name="go_register">去注册</string>
    <string name="regist_password">请输入您的密码(不少于6位数)</string>
    <string name="regist_succed">注册成功</string>
    <string name="regist_title">用户注册</string>
    <string name="regist_btn">注册</string>
    <string name="tips_input_phone">请输入您的手机号</string>
    <string name="confirm_btn">确定</string>
    <string name="yuan_one">元/位</string>
    <string name="rmb">¥</string>
    <string name="xiegang">/</string>
    <string name="enroll_joyed">报名人数:</string>
    <string name="enroll_tickes">门票:</string>
    <string name="enroll_place">地点:</string>
    <string name="enroll_free">免费</string>
    <string name="text_suggestion">意见反馈</string>
    <string name="join_neabystatr">即将开始</string>
    <string name="join_ing">进行中</string>
    <string name="join_end">已结束</string>
    <string name="setting">设置</string>
    <string name="my_joined">活动</string>
    <string name="setting_text">设置</string>
    <string name="freeof">免费</string>
    <string name="inputyourid">请输入您的昵称</string>
    <string name="getinvailidatacode">获取验证码</string>
    <string name="beizhu_60">备注(选填,60字以内)</string>
    <string name="confirm_text">确认提交</string>
    <string name="code_text">验证码</string>
    <string name="enroll_phone">手机号</string>
    <string name="enroll_age">年龄</string>
    <string name="enroll_sex">性别</string>
    <string name="enroll_name">姓名</string>
    <string name="enroll_enroll">报名信息</string>
    <string name="enroll_time">时间:</string>
    <string name="aboutperfit_zeropart">Perfit ，2016年成立于北京。</string>
    <string name="aboutperfit_onepart">专注竞技赛事领域，主打“原创精品系列赛事”及“赛事周边文娱活动”。</string>
    <string name="aboutperfit_secondpart">致力于打造国内领先的，集赛事、娱乐、内容为一体的综合服务平台。</string>
    <string name="aboutperfit_thirdpart">Perfit是建立于传统运动赛事文化基础之上，秉承价值发现、价值创造、价值提升的核心理念，为全民体育事业，搭建一个从行业升级、产业升级到内容升级、服务升级的开放、多元、个性化的体育文化平台。</string>
    <string name="aboutperfit_lastpart">Perfit积极发展全民体育事业，传递独立、正义、活泼、勇敢的核心价值观。号召让全民运动发展成为全民皆可轻松参与的一项娱乐狂欢派对。</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="register_input_phonecode">请输入您的手机号</string>
    <string name="renminbi">¥</string>
    <string name="rerund">申请退款</string>
    <string name="space"><![CDATA[&#160;]]></string>
    <string name="confirm_refound">确认退款</string>
    <string name="alipay">支付宝</string>
    <string name="weixin">微信</string>
    <string name="count">数量：</string>
    <string name="groupbuying">团购券</string>
    <string name="creatordertime">下单时间：</string>
    <string name="totalprice">总价：</string>
    <string name="qianggou">抢购</string>
    <string name="suggerstion">意见反馈</string>
    <string name="adboutas">关于我们</string>
    <string name="shopcollect">商家精选</string>
    <string name="dehuodoong">的活动</string>
    <string name="huodong">活动</string>
    <string name="personprofile">个人资料</string>
    <string name="startquickly">即将开始</string>
    <string name="wancheng">完成</string>
    <string name="pingjia">评价</string>
    <string name="pingjiacount">(0)</string>
    <string name="yuan">元</string>
    <string name="total">合计:</string>
    <string name="gopay">去付款</string>
    <string name="personalcenter">个人中心</string>

    <string name="menu_album">相册</string>
    <string name="menu_sure">确定</string>
    <string name="next_step">下一步</string>
    <string name="_0">0</string>
    <string name="gallery">相册胶卷</string>
    <string name="cancel2">取消</string>
    <string name="fensi">粉丝</string>
    <string name="yiguanzhu">已关注</string>
    <string name="guanzhu">关注</string>
    <string name="personalcenter2">个人中心</string>
    <string name="tiezi">帖子</string>
    <string name="liketext">喜欢</string>
    <string name="post_imagview">postimageview</string>
    <string name="activitytext">活跃值</string>
    <string name="notecontent">内容</string>
    <string name="hotstar">#红人榜</string>
    <string name="scoreranking">#积分榜</string>

</resources>
