<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mTitle"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y100"
    android:background="@color/white"
    android:minHeight="?attr/actionBarSize"
    app:logo="@null"
    app:subtitleTextColor="#AAFFFFFF"
    app:titleMarginStart="0dp"
    app:titleTextColor="#FFFFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:text="@string/cancel2"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
             />

        <LinearLayout
            android:id="@+id/ll_title_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textColor="@color/black"
                android:textSize="@dimen/toobar_title_size" />

            <ImageView
                android:id="@+id/iv_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x10"
                android:src="@drawable/gallery_sj" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_next_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/x10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            >

            <ImageButton
                android:id="@+id/ib_next"
                android:layout_width="@dimen/x105"
                android:layout_height="@dimen/y56"
                android:layout_gravity="start"
                android:layout_marginRight="@dimen/x30"
                android:background="@drawable/btn_myjoin_bg"
                android:layout_marginTop="@dimen/x10"
                android:textColor="@color/white" />

            <TextView
                android:layout_gravity="center"
                android:textColor="@color/purple_white"
                android:layout_marginTop="@dimen/x6"
                android:text="@string/next_step"
                android:textSize="@dimen/x22"
                android:paddingRight="@dimen/x32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_count"
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:layout_gravity="right"
                android:textSize="@dimen/x20"
                android:layout_marginTop="@dimen/x6"
                android:layout_marginRight="@dimen/x20"
                android:background="@drawable/btn_circlebg"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/groupbuying_price" />


        </FrameLayout>


    </RelativeLayout>


</android.support.v7.widget.Toolbar>